# CSharpExceptionMessageReproducer

./: .gitignore  CMakeLists.txt  CSharpExceptionMessageReproducer.sln
csharp_test/: CSharpExceptionMessageReproducer.Test.csproj
csharp_test/src/: TestMain.cs
native_interface/: CMakeLists.txt  CSharpExceptionMessageReproducer.NativeInterface.vcxproj
native_interface/include/: ExceptionMessageReproducer.hh  NonCLRExceptionGenerator.hh
native_interface/src/: ExceptionMessageReproducer.cc  NonCLRExceptionGenerator.cc
